# mineshare

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  mineshare-test.err
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/mineshare-audio/: Cargo.toml
crates/mineshare-audio/src/: codec.rs  cpal_mic.rs  lib.rs  pipewire_monitor.rs  playback.rs  resample.rs  virtual_mic_linux.rs  virtual_mic_win.rs  wasapi_loopback.rs
crates/mineshare-core/: Cargo.toml
crates/mineshare-core/src/: device.rs  layout.rs  lib.rs  routing.rs  source_fsm.rs
crates/mineshare-daemon/: Cargo.toml
crates/mineshare-daemon/src/: audio_status.rs  clipboard.rs  collect.rs  files.rs  identity.rs  latency.rs  layout.rs  lib.rs  logs.rs  main.rs  pairing.rs  runtime.rs  settings.rs  status.rs  trust.rs
crates/mineshare-input/: Cargo.toml
crates/mineshare-input/src/: lib.rs  linux.rs  windows.rs
crates/mineshare-ipc/: Cargo.toml
crates/mineshare-ipc/src/: lib.rs
crates/mineshare-net/: Cargo.toml
crates/mineshare-net/src/: discovery.rs  lib.rs  pairing.rs  proto.rs
installer/linux/: 60-mineshare.rules  README.md  deb-postinst  deb-prerm  install.sh  mineshare-daemon.service  uninstall.sh
installer/windows/: README.md  install.ps1  uninstall.ps1
scripts/: build-installer.ps1  build-installer.sh  launch-mineshare-gui.sh  launch-mineshare.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  PairingModal.tsx  i18n.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
ui/src/pages/: Advanced.tsx  Audio.tsx  Devices.tsx  Files.tsx  Hotkeys.tsx  Layout.tsx
