[package]
name = "mineshare-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mineshare-core = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
