[package]
name = "mineshare-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "mineshare_daemon"
path = "src/lib.rs"

[[bin]]
name = "mineshare-daemon"
path = "src/main.rs"

[dependencies]
mineshare-core = { workspace = true }
mineshare-net = { workspace = true }
mineshare-input = { workspace = true }
mineshare-audio = { workspace = true }
mineshare-ipc = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
dirs = "6"
clap = { version = "4", features = ["derive"] }
time = { workspace = true }
bincode = { workspace = true }
arboard = { workspace = true }
socket2 = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
hostname = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
hostname = "0.4"
