[package]
name = "mineshare-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mineshare-core = { workspace = true }
mineshare-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
