[package]
name = "mineshare-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mineshare-core = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

mdns-sd = { workspace = true }
snow = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
