# Opt out of the parent workspace — Tauri keeps its own lockfile and target dir.
[workspace]

[package]
name = "mineshare-app"
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[lib]
name = "mineshare_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Wire the workspace crates so the Tauri backend can drive the daemon
# directly. M5 rewires the GUI to embed the full daemon runtime
# (capture + audio + clipboard + control) instead of the M0
# discovery-only prototype, so the same binary serves as both the
# headless bridge and its UI.
mineshare-core   = { path = "../../crates/mineshare-core" }
mineshare-net    = { path = "../../crates/mineshare-net" }
mineshare-ipc    = { path = "../../crates/mineshare-ipc" }
mineshare-input  = { path = "../../crates/mineshare-input" }
mineshare-daemon = { path = "../../crates/mineshare-daemon" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "macros", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
